// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary with multiple expenses 1`] = `
<div
  className="page-header"
>
  Viewing 
  <span
    className="bold"
  >
    23
  </span>
   expenses 
  totalling 
  <span
    className="bold"
  >
    € 6 254,37
  </span>
</div>
`;

exports[`should render ExpensesSummary with no expenses 1`] = `
<div
  className="page-header"
>
  Viewing 
  <span
    className="bold"
  >
    0
  </span>
   expenses 
  totalling 
  <span
    className="bold"
  >
    € 0,00
  </span>
</div>
`;

exports[`should render ExpensesSummary with one expense 1`] = `
<div
  className="page-header"
>
  Viewing 
  <span
    className="bold"
  >
    1
  </span>
   expense 
  totalling 
  <span
    className="bold"
  >
    € 123,54
  </span>
</div>
`;
